refactor: EventDay 일대다 관계 변경